--- a/index.html
+++ b/index.html
@@ -5,9 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>HOME</title>
+    <link rel="stylesheet" href="./css/base.css" />
     <link rel="stylesheet" href="./js/jquery-ui/jquery-ui.min.css" />
     <script src="./js/jquery-3.6.0.min.js"></script>
     <script src="./js/jquery-ui/jquery-ui.min.js"></script>
+    <script src="./js/data.js"></script>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <div class="wrapper">
+        <ul>
+          <li><a href="./index.html">HOME</a></li>
+          <li><a href="./products.html">PRODUCTS</a></li>
+          <li><a href="./checkout.html">CHECK OUT</a></li>
+          <li><a href="./about.html">ABOUT</a></li>
+        </ul>
+      </div>
+    </header>
+    <main style="height: 600px"></main>
+    <footer>
+      <div class="wrapper">
+        <span> IT121-FINAL-PROJECT YINGHENG HE (HANK) </span>
+      </div>
+    </footer>
+  </body>
 </html>
