--- a/index.html
+++ b/index.html
@@ -6,10 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>HOME</title>
     <link rel="stylesheet" href="./css/base.css" />
-    <link rel="stylesheet" href="./js/jquery-ui/jquery-ui.min.css" />
+    <link rel="stylesheet" href="./css/index.css" />
     <script src="./js/jquery-3.6.0.min.js"></script>
-    <script src="./js/jquery-ui/jquery-ui.min.js"></script>
-    <script src="./js/data.js"></script>
+    <script src="./js/index.js"></script>
   </head>
   <body>
     <header>
@@ -22,7 +21,51 @@
         </ul>
       </div>
     </header>
-    <main style="height: 600px"></main>
+    <main id="index">
+      <div class="wrapper">
+        <div id="line-1">
+          <div id="line-1-1">
+            <img src="./images/index-1.jpg" alt="index-1" />
+          </div>
+          <div id="line-1-2">
+            <p>I GUESS YOU LOVE</p>
+            <p>
+              <img src="./images/mouses/7.jpg" alt="" />
+              <img src="./images/headphones/11.jpg" alt="" />
+            </p>
+            <p>
+              <img src="./images/keyboards/2.jpg" alt="" />
+              <img src="./images/mouses/8.jpg" alt="" />
+            </p>
+          </div>
+          <div id="line-1-3">
+            <p>GAMMING KEYBOARD</p>
+            <img src="./images/keyboards/4.jpg" alt="" />
+          </div>
+        </div>
+        <div id="line-2">
+          <p class="line-2-title">GET IT TODAY</p>
+          <div id="img-wrapper">
+            <img src="./images/mouses/5.jpg" alt="" />
+            <img src="./images/keyboards/1.jpg" alt="" />
+            <img src="./images/headphones/11.jpg" alt="" />
+            <img src="./images/headphones/9.jpg" alt="" />
+            <img src="./images/mouses/6.jpg" alt="" />
+            <img src="./images/headphones/12.jpg" alt="" />
+            <img src="./images/mouses/8.jpg" alt="" />
+            <img src="./images/mouses/7.jpg" alt="" />
+            <img src="./images/keyboards/2.jpg" alt="" />
+            <img src="./images/keyboards/4.jpg" alt="" />
+          </div>
+          <div id="arrow-left" class="arrow" data-action="left">
+            <span></span>
+          </div>
+          <div id="arrow-right" class="arrow" data-action="right">
+            <span></span>
+          </div>
+        </div>
+      </div>
+    </main>
     <footer>
       <div class="wrapper">
         <span> IT121-FINAL-PROJECT YINGHENG HE (HANK) </span>
