--- a/about.html
+++ b/about.html
@@ -4,11 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>HOME</title>
+    <title>ABOUT</title>
     <link rel="stylesheet" href="./css/base.css" />
-    <link rel="stylesheet" href="./css/index.css" />
-    <script src="./js/jquery-3.6.0.min.js"></script>
-    <script src="./js/index.js"></script>
+    <link rel="stylesheet" href="./css/about.css" />
   </head>
   <body>
     <header>
@@ -21,7 +19,22 @@
         </ul>
       </div>
     </header>
-    <main id="index"></main>
+    <main id="about">
+      <p>Let's work together.</p>
+      <div id="wrapper">
+        <div id="div-image">
+          <img src="./images/worktogether.jpg" alt="" />
+        </div>
+        <div id="div-info">
+          <p class="label">Mailing Address</p>
+          <p class="content">1701 Broadway, Seattle, WA 98122</p>
+          <p class="label">Phone Number</p>
+          <p class="content">(206)9343800</p>
+          <p class="label">Email Address</p>
+          <p class="content">contact@seattlecentral.edu/</p>
+        </div>
+      </div>
+    </main>
     <footer>
       <div class="wrapper">
         <span> IT121-FINAL-PROJECT YINGHENG HE (HANK) </span>
