--- a/checkout.html
+++ b/checkout.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>HOME</title>
+    <title>CHECK OUT</title>
     <link rel="stylesheet" href="./css/base.css" />
     <link rel="stylesheet" href="./js/jquery-ui/jquery-ui.min.css" />
     <link rel="stylesheet" href="./css/checkout.css" />
